Bug 352214 - Event is not displayed in the UI if the invitation list contains the creator's email address with PARTSTAT=NEEDS-ACTION (or maybe anything else than PARTSTAT=ACCEPTED?)
Summary: Event is not displayed in the UI if the invitation list contains the creator'...
Status: RESOLVED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.4.0
Platform: Neon Linux
: NOR major
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
: 366055 (view as bug list)
Depends on:
Blocks: 366055
  Show dependency treegraph
 
Reported: 2015-09-03 12:11 UTC by Gunter Ohrner
Modified: 2020-05-22 11:11 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Gunter Ohrner 2015-09-03 12:11:41 UTC
If I create an event with participants, of which at least one mail address maps back to myself, the event is not added to the calendar, but silently discarded.

This might cause information loss if the user adds an event with a reminder and relies on being reminded once this event is due!

Reproducible: Always

Steps to Reproduce:
1. Create a new event.
2. Invite participants, at least one of whom you are yourself. The mapped identity does not need to equal organisers identity.
    Concrete example in my case:
    The organiser's ID I used was something like gunter@example.com while I invited
    staff@example.com, which is configured as an alias for my identity in kMail.
    However, even if I invite gunters_different_identity@example.com, which belongs to a totally
    different identity in kMail, the event does not get added to the calendar.
3. Save the event.

Actual Results:  
An invitation is sent, but the event is NOT added to the organisers calendar.

The invitation received can not be reacted upon. (It reads:

***********************************************
Invitation List
invited_address@example.com (myself)  	Needs Action
***********************************************

but you cannot click anywhere, no action link is provided.)

Expected Results:  
The event should have been added to the organisers calendar.

The organiser possibly should also be able to perform some actions with the invitation received, although this might not make a lot of sense.

It's a rather common case that I create events with an invitation list which includes another identity of mine or even an email alias of the identity used as the organiser's.

In most of these cases, the invited email addresses are distribution lists I am a member of.
Comment 1 Gunter Ohrner 2017-01-06 11:35:15 UTC
This bug is still current as of KOrganizer Version 5.4.1, KDE Frameworks 5.30.0, Qt 5.7.0 (built against 5.7.0), KDE Neon package version 
4:16.12.0+p16.04+git20161228.0807-0. (So I updated the 

Again I missed an appointment due to this!

Further investigation shows that the event actually IS imported into the calendar - it shows up in the ics file used as the backing store - but there's not sign of it whatsoever in the kOrganizer UI... :-/

So this actually appears to be the same issue as bug 366055.

Also, as the import "did not work", this caused me to import some events twice which now show up in the iCal file multiple times *with the same UID*. Probably that should not happen? This also happens for normal events and I'll file a separate bug for this...
Comment 2 Gunter Ohrner 2017-01-06 11:35:31 UTC
*** Bug 366055 has been marked as a duplicate of this bug. ***
Comment 3 Gunter Ohrner 2017-01-06 12:21:34 UTC
Ok, the problem is the following:

The event is not displayed if I invite myself, as in this case I have not confirmed that I'll participate. ;)

My own participation will be in state "PARTSTAT=NEEDS-ACTION" which apparently causes kOrganizer to hide the event.

If I change this to "PARTSTAT=ACCEPTED" in the backing store file and restart Akonadi, the event will appear.

While I can understand the reason for not showing events I do not participate in, this behaviour is definitely wrong for events I created myself.

If those are not displayed any more, I have no way to further edit or even view them.

So independently of the participant's states, events I created myseld (i.e. where the ORGANIZER address maps back to myself) should always be displayed!



Additional thoughts:

Additionally I'd question the fact that there may be events in the calendar I'm not participating in - why are such events even stored in this case?

I could see the point for events which I declined - it's probably important to remember those to be able to process certain kinds of updates for those.

However, events in state "PARTSTAT=NEEDS-ACTION" for myself? Maybe if those somehow end up in the calendar, those should be shown as "placeholders", maybe in a transparent or greyed-out way?

Also in this case, events which I created myself should probably always be considered as "ACCEPTED" by me.
Comment 4 Gunter Ohrner 2017-02-12 11:03:12 UTC
This behaviour also leads to invitations becoming invisible which

* I create myself and
* which invite an email address of any other of my email identities or an alias thereof.

This means - I create the event, click ok, and it's gone. (Ok, technically, it's in the data store, but there's not way to see it in the UI.)
Comment 5 Bart 2017-08-21 21:17:01 UTC
I also got hit by this issue, I imported an invitation but it did not show in the month view. Spend some time investigating why, can there be at least a placeholder in stead of hiding the event?
Comment 6 Alexander Görtz 2018-01-10 07:24:32 UTC
I just got hit by this too. I got an invitation ICS file from Cisco WebEx via KMail and as there was no option to accept like there is in thunderbird/lightning So I tried to open and import it. It showed as beeing imported and the akonadi console show it but it is not displayed and I had no option to accept the event. Is there a workaround for this except editing the backend file?
Comment 7 Martin Koller 2018-04-09 17:28:58 UTC
Git commit 268284b419a519e08367c19de3fb1f9ed841acea by Martin Koller.
Committed on 09/04/2018 at 17:28.
Pushed by mkoller into branch 'master'.

always show an incidence if we are the organizer

M  +5    -0    src/calfilterpartstatusproxymodel_p.cpp

https://commits.kde.org/akonadi-calendar/268284b419a519e08367c19de3fb1f9ed841acea
Comment 8 Martin Koller 2018-04-14 11:57:13 UTC
Git commit 86625a0ebcd5d0bf2e13edb05cea7acfd5121a82 by Martin Koller.
Committed on 14/04/2018 at 11:56.
Pushed by mkoller into branch 'Applications/18.04'.

always show an incidence if we are the organizer
(cherry picked from commit 268284b419a519e08367c19de3fb1f9ed841acea)

M  +5    -0    src/calfilterpartstatusproxymodel_p.cpp

https://commits.kde.org/akonadi-calendar/86625a0ebcd5d0bf2e13edb05cea7acfd5121a82