always show an incidence if we are the organizer

BUG: 352214